--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
 
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 
+
+
+    compile 'com.facebook.android:facebook-android-sdk:4.23.0'
+
+
 }
