--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
 
+
+
     <application
         android:name=".GlobalVariable"
         android:allowBackup="true"
@@ -18,6 +20,9 @@
         android:roundIcon="@mipmap/pay_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
